--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cookie&family=Dancing+Script:wght@400;500;600;700&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/index.css" />
-    <title>Assignment5</title>
+    <title>Mealify.</title>
   </head>
   <body>
 
